# waves-haskell

./: .gitignore  .gitmodules  cabal.project  cabal.sandbox.config  stack.yaml
elliptics/: LICENSE  README.md  elliptics.cabal
elliptics/src/Crypto/Elliptics/: Curve25519.hs
elliptics/test/: Spec.hs
waves-crypto/: ChangeLog.md  README.md  waves-crypto.cabal
waves-crypto/src/Waves/: Crypto.hs
waves-crypto/src/Waves/Crypto/: Base.hs  Funcs.hs  Types.hs
waves-data/: ChangeLog.md  README.md  waves-data.cabal
waves-data/src/Waves/: Data.hs  Utils.hs
waves-data/src/Waves/Data/: AddressOrAlias.hs  Asset.hs  Block.hs  Checkpoint.hs  Common.hs  Microblock.hs  Order.hs  Proofs.hs  Transaction.hs
waves-data/src/Waves/Data/Transaction/: TransactionDecoder.hs  TransactionEncoder.hs  TransactionID.hs  TransactionSign.hs  Types.hs
waves-data/test/: AddressOrAliasSpec.hs  ProofSpec.hs  Spec.hs  TxSpec.hs
waves-fork-monitor/: ChangeLog.md  waves-fork-monitor.cabal
waves-fork-monitor/src/: Main.hs
waves-network/: ChangeLog.md  LICENSE  README.md  waves-network.cabal
waves-network/src/Waves/: Network.hs
waves-network/src/Waves/Network/Protocol/: SerDe.hs  Types.hs
waves-network/src/Waves/Network/Transport/: Error.hs  Node.hs
